# lyricsearch

./: .dockerignore  .gitignore  Dockerfile  README.md  setup.cfg
data/: artist-daft_punk.json  fetch  lyrics-around_the_world.json  songs-daft_punk-p2.json  songs-daft_punk.json
functional_tests/: test_cli.py
scripts/: fetch_example_data  run_functional_tests  run_smoke_test  run_unit_tests
src/lyricsearch/: __main__.py  async_controller.py  controller.py  logging.py  plot.py  transforms.py
src/lyricsearch/tests/: test_async.py  test_lyrics.py  test_transforms.py
