[metadata]
name = lyricsearch
version = 0.0.1
author = Fred Collman
description = Explore lyrics info for musical artists.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fredcollman/lyricsearch
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    aiohttp

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    isort
    responses
    aioresponses
